--- a/index.html
+++ b/index.html
@@ -11,31 +11,36 @@
   <body>
     <div class="container">
       <div class="flex-container">
-        <img src="" alt="" />
-        <div class="form-section">
-          <h1>New user sign up</h1>
-          <form action="">
-            <input type="text" name="username" placeholder="username" />
-            <p>Username must be alphanumeric and container 5-12 characters</p>
+        <div class="img-items">
+          <img src="Untitled design.png" alt="" />
+        </div>
+        <div class="items">
+          <div class="form-section">
+            <h1>New user sign up</h1>
+            <form>
+              <input type="text" name="username" placeholder="username" />
+              <p>Username must be alphanumeric and container 5-12 characters</p>
 
-            <input type="text" name="email" placeholder="email" />
-            <p>Email must be a valid address. e.g me@mydomain.com</p>
+              <input type="text" name="email" placeholder="email" />
+              <p>Email must be a valid address. e.g me@mydomain.com</p>
 
-            <input type="password" name="password" placeholder="password" />
-            <p>
-              Password must be alphanumeric (@._ and - are also allowed) and be
-              between 8-20 characters
-            </p>
+              <input type="password" name="password" placeholder="password" />
+              <p>
+                Password must be alphanumeric (@._ and - are also allowed) and
+                be between 8-20 characters
+              </p>
 
-            <input type="text" name="telephone" placeholder="telephone" />
-            <p>Telephone must be a valid uk telephone number (11 digits)</p>
+              <input type="text" name="telephone" placeholder="telephone" />
+              <p>Telephone must be a valid uk telephone number (11 digits)</p>
 
-            <input type="text" name="slug" placeholder="profile slug" />
-            <p>
-              slug must contain only lowercase letters, numbers and hyphens and
-              be 8-20 characters
-            </p>
-          </form>
+              <input type="text" name="slug" placeholder="profile slug" />
+              <p>
+                slug must contain only lowercase letters, numbers and hyphens
+                and be 8-20 characters
+              </p>
+              <a href="">Submit</a>
+            </form>
+          </div>
         </div>
       </div>
     </div>
